# wan-video

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api.py  api_errors.py  docker-compose.yml  env_utils.py  fal-ai-inference.py  fal_utils.py  generation_runner.py  hunyuan-3d.py  ideogram-character.py  job_runner.py  justfile  kling-create-voice.py  menu.py  nano-banana.py  output_utils.py  paths.py  pyproject.toml  requirements.txt  run_all.py  runs.py  scripts_config.py  seeddance-video.py  storage.py  test_api.py  trellis2-3d.py  wan-inference.py  wan_prompt.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_users_and_auth.py
auth/: __init__.py  deps.py  jwt_utils.py  routes.py  telegram_auth.py  users.py
db/: __init__.py  models.py  record.py  session.py
docker/: minio-init.sh
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: tonconnect-manifest.json
frontend/src/: api.ts  auth.ts  index.css  main.tsx
frontend/src/components/: AuthBar.tsx  Layout.tsx  MediaTile.tsx  ModelLaunchCard.tsx  RunCard.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  GalleryPage.tsx  RunDetailPage.tsx  ScriptsPage.tsx  StudioPage.tsx
scripts/: __init__.py  _bootstrap.py
scripts/image/: flux.py  ideogram_character.py  nano_banana.py
scripts/model_3d/: hunyuan.py  trellis2.py
scripts/video/: seedance.py  wan.py
scripts/voice/: kling.py
