[project]
name = "wan-video"
version = "0.1.0"
description = "fal.ai and Hugging Face inference scripts for video, image, 3D, and voice generation"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.36.0",
    "fal-client",
    "requests",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "pyjwt>=2.10",
]

[tool.uv]
managed = true
